--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: DAVEN
 description: Bing Bong
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
 remote_theme: pages-themes/hacker@v0.2.0
