--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: DAVEN
-description: Bing Bong
+title: DaveN
+description: old github acc wiped, fuck you for doxxing me, releases on nulled are still up
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
