--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: DaveN
-description: old github acc wiped, fuck you for doxxing me, releases on nulled are still up
+description:
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
